...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Movie Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="03c-1w-31a">
                                <rect key="frame" x="16" y="330" width="343" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="movie_txt_titleElement"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Movie Date" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jtk-UX-QOZ">
                                <rect key="frame" x="16" y="368" width="343" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="movie_txt_dateElement"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="16" y="406" width="343" height="150"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="overviewElement"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="xzW-4R-nnU"/>
...
                                <rect key="frame" x="112.5" y="272" width="150" height="50"/>
                                <color key="backgroundColor" red="0.14688250420000001" green="0.2473469079" blue="0.33771663899999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="btn_selectImageElement"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="fkJ-N1-Kg2"/>
...
                                <rect key="frame" x="8" y="564" width="359" height="50"/>
                                <color key="backgroundColor" red="0.14688250420000001" green="0.2473469079" blue="0.33771663899999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="btn_saveMovieElement"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Gk7-H8-s14"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Movies" id="TFZ-Lu-z9u">
                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="oSh-4g-fwT">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="My Movies" id="z28-Bs-8FM">
                            <color key="tintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                            <connections>
...
                    <connections>
                        <outlet property="loaderViewController" destination="mMH-ad-tEN" id="hbY-Ra-ndT"/>
                        <outlet property="movies_tableView" destination="u0m-8d-jyY" id="Owm-bY-dcr"/>
                    </connections>
                </viewController>
...
                    </view>
                    <connections>
                        <outlet property="myMovies_tableView" destination="Y7j-iy-HlQ" id="aAW-db-lPe"/>
                    </connections>
                </viewController>
...
