...
        let dataSource_delegate = MovieTableViewDelegateDataSource( fixedRowHeight: fixedRowHeight)
        return dataSource_delegate
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "movieListView"

        // TABLEVIEW DATA SOURCE
        self.movies_tableView.dataSource = dataSource_and_delegate
        self.movies_tableView.delegate = dataSource_and_delegate
        
        //  REFRESH CONTROLLER
...
